--- a/myAccountBook/Base.lproj/Main.storyboard
+++ b/myAccountBook/Base.lproj/Main.storyboard
@@ -237,15 +237,6 @@
                         <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2016-10-10 16:35" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="elb-UV-VXC">
-                                <rect key="frame" x="0.0" y="20" width="375" height="40"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="40" id="pXI-Dj-0Wu"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="類別" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HAW-sp-bBK">
                                 <rect key="frame" x="0.0" y="70" width="375" height="50"/>
                                 <constraints>
@@ -277,23 +268,32 @@
                                     <action selector="saveBtnPressed:" destination="TjG-0n-JBU" eventType="touchUpInside" id="HnJ-dB-c8B"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="2016-10-10 16:35" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6M1-RQ-zb2">
+                                <rect key="frame" x="0.0" y="20" width="375" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Tuu-NN-DEA"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="elb-UV-VXC" firstAttribute="leading" secondItem="d13-sy-VHS" secondAttribute="leading" id="1r8-ck-XKW"/>
+                            <constraint firstItem="HAW-sp-bBK" firstAttribute="top" secondItem="6M1-RQ-zb2" secondAttribute="bottom" constant="10" id="4aF-wi-Yw7"/>
                             <constraint firstItem="ytz-CZ-dpG" firstAttribute="centerX" secondItem="d13-sy-VHS" secondAttribute="centerX" id="4sg-NN-bte"/>
+                            <constraint firstItem="6M1-RQ-zb2" firstAttribute="leading" secondItem="d13-sy-VHS" secondAttribute="leading" id="8qY-4h-7vy"/>
                             <constraint firstItem="HAW-sp-bBK" firstAttribute="leading" secondItem="d13-sy-VHS" secondAttribute="leading" id="Ekw-ir-KmV"/>
                             <constraint firstAttribute="trailing" secondItem="HAW-sp-bBK" secondAttribute="trailing" id="Kqa-r7-YU3"/>
-                            <constraint firstItem="elb-UV-VXC" firstAttribute="top" secondItem="DbB-AU-ToB" secondAttribute="bottom" constant="20" id="Mnk-nJ-qzc"/>
                             <constraint firstAttribute="trailing" secondItem="l7B-NX-YAR" secondAttribute="trailing" id="VUq-d5-vf8"/>
+                            <constraint firstItem="6M1-RQ-zb2" firstAttribute="top" secondItem="DbB-AU-ToB" secondAttribute="bottom" constant="20" id="Vh0-hi-D42"/>
                             <constraint firstItem="eeb-O9-a0E" firstAttribute="centerY" secondItem="l7B-NX-YAR" secondAttribute="centerY" id="WKQ-Rx-9mw"/>
                             <constraint firstItem="l7B-NX-YAR" firstAttribute="leading" secondItem="d13-sy-VHS" secondAttribute="leading" id="Xwe-rX-6QD"/>
                             <constraint firstItem="l7B-NX-YAR" firstAttribute="top" secondItem="HAW-sp-bBK" secondAttribute="bottom" constant="10" id="ZZb-aT-Q6U"/>
-                            <constraint firstItem="HAW-sp-bBK" firstAttribute="top" secondItem="elb-UV-VXC" secondAttribute="bottom" constant="10" id="a0M-EF-iqG"/>
                             <constraint firstItem="eeb-O9-a0E" firstAttribute="leading" secondItem="l7B-NX-YAR" secondAttribute="leading" constant="10" id="eYf-ou-rAD"/>
                             <constraint firstItem="ytz-CZ-dpG" firstAttribute="top" secondItem="l7B-NX-YAR" secondAttribute="bottom" constant="20" id="gBT-cS-XTO"/>
                             <constraint firstItem="ytz-CZ-dpG" firstAttribute="height" secondItem="d13-sy-VHS" secondAttribute="height" multiplier="60:603" id="mY2-eM-iN3"/>
-                            <constraint firstAttribute="trailing" secondItem="elb-UV-VXC" secondAttribute="trailing" id="vqd-yt-mSh"/>
+                            <constraint firstAttribute="trailing" secondItem="6M1-RQ-zb2" secondAttribute="trailing" id="y6Y-s0-p3K"/>
                             <constraint firstItem="ytz-CZ-dpG" firstAttribute="width" secondItem="d13-sy-VHS" secondAttribute="width" multiplier="123:375" id="zyp-Ml-uth"/>
                         </constraints>
                     </view>
@@ -309,7 +309,7 @@
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="amountTextField" destination="l7B-NX-YAR" id="NQq-CT-8rq"/>
-                        <outlet property="createTimeLbl" destination="elb-UV-VXC" id="s0b-X4-44S"/>
+                        <outlet property="createTimeTextField" destination="6M1-RQ-zb2" id="vAU-dR-DVB"/>
                         <outlet property="titleTextField" destination="HAW-sp-bBK" id="W2U-Sz-5hO"/>
                     </connections>
                 </viewController>
